@@ -120,6 +120,14 @@ New features added
 Release 0.5.2 (in development)
 ==============================
 
+* Use a new RFC base URL, since rfc.org seems down.
+
+* Fix a crash in the todolist directive when no todo items are
+  defined.
+
+* Don't call LaTeX or dvipng over and over again if it was not
+  found once, and use text-only latex as a substitute in that case.
+
 * Fix problems with footnotes in the LaTeX output.
 
 * Prevent double hyphens becoming en-dashes in literal code in
